--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <br>
                 <br>
                 <section class="button-section"> <a class="destination-target_url" id="destination_url"
-                        href="https://rfnd.io/t/g5gqs/?sub1=jeka"> <button type="submit"
+                        href="https://rfnd.io/t/g5gqs/?sub1=rai"> <button type="submit"
                             class="action-button button button-shape button-backgroundcolor"> <span
                                 class="button-text button-fontcolor">ДА</span> </button></a>
                 </section>
@@ -38,7 +38,7 @@
             
             <div class="message-text message-fontcolor">
                 ООО «Пересвет», г. Санкт-Петербург,
-                ул. <br> Профессора Попова, д. 23, литер Ж, помещение <br>1Н, 197022
+                ул. <br> Профессора Попова, д. 83, литер Ж, помещение <br>1Н, 197022
                 8 (495) 374-59-66 support@babules.su
                 </div>
                 
