--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <br>
                 <br>
                 <section class="button-section"> <a class="destination-target_url" id="destination_url"
-                        href="https://rfnd.io/t/g5gqs/?sub1=rai"> <button type="submit"
+                        href="https://gredivsem.github.io/lol"> <button type="submit"
                             class="action-button button button-shape button-backgroundcolor"> <span
                                 class="button-text button-fontcolor">ДА</span> </button></a>
                 </section>
